A tad more work

--- a/DollarComputers/StartForm.resx
+++ b/DollarComputers/StartForm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAAAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAACAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADMZgAFulUqMLVTIjTbbUkHAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAK1SJBy2WCoxtFotEQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAtFMjOrNTJN2yUiP/slIj/7JS
+        I/yyVieJslIkMr9ZJhS5XS4LuFwpGbFWJT60VSaoslEi/rJSI/+yUiP8s1Qng7JMGQoAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAALVXKEyxUyP9slIj/7JS
+        I/+yUiP/slIj/7JSI/+yUiP/slIj/7JSI/+yUiP/slIj/7JSI/+yUiP/slIj/7JSI/+yUiP/slMmtsxm
+        AAUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAC6WiklsVMk+rJS
+        I/+yUiP/slIj/7JSI/+yUiP/slIj/7JSI/+yUiP/slIj/7JSI/+yUiP/slIj/7JSI/+yUiP/slIj/7JS
+        I/+yUiP/s1YnpAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJ5H
+        PdyhRjj/oEY4/6BGOP+gRjj/oEY4/6BGOP+gRjj/oEY4/6BGOP+gRjj/oEY4/6FGOP+hRjj/oUY4/6FG
+        OP+gRjf/oUY3/6FGN/+hRjf9kEpZRQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AABoJomiZyKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2gi
+        gv9oIoL/aCKC/2gigv9oIoL/aCKC/2gigv9oI4LdAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAaS2WEWgigvZoIoL/aCKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2gi
+        gv9oIoL/aCKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2cigv5rKIxfAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAABpJoa+aCKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2gi
+        gv9oIoL/aCKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2gigv9oIoL/aCKC/2ciguxAAH8EAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAMxmZCkoblflJG5X/ShuV/0oblf9KG5X/ShuV/0oblf9KG5X/ShuV/0ob
+        lf9JG5X/ShuV/0kblf9KG5X/ShuV/0kblf9JG5X/SRuV/0kblf9JG5X/SRuV/0kblf9JG5X/SRqV/T4w
+        wSUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAqKslaDg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4P
+        vf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4P
+        vfwTFsKxNjbJEwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkZw9wOD73/Dg+9/w4Pvf8OD73/Dg+9/w4P
+        vf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4P
+        vf8OD776HR/HegAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAzM8wPDg+9/w4Pvf8OD73/Dg+9/w4P
+        vf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4Pvf8OD73/Dg+9/w4P
+        vf8OD73/Dg+9/xgaw50AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAB8u0SEQI8r/ECPK/xAj
+        yv8QI8r/ECPK/xAjyv8QI8r/ECPK/xAjyv8QI8r/ECPK/xAjyv8QI8r/ECPK/xAjyv8QI8r/ECPK/xAj
+        yv8QI8r/ECPK/xAjyv8VJcveAAD/AgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAI2jzLBxq
+        +P8cavj/HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/HGr4/xxq
+        +P8cavj/HGr4/xxq+P8cavj/HGr4/yNq9IwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAudPY3HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/HGr4/xxq
+        +P8cavj/HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/KGz0WgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAACRt9TEcavj/HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/HGr4/xxq
+        +P8cavj/HGr4/xxq+P8cavj/HGr4/xxq+P8cavj/HGr4/xxq+P8pa/RFAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAKozzKiGL+P8hi/j/IYv4/yGL+P8hi/j/IYv4/yGL+P8hi/j/IYv4/yGL
+        +P8hi/j/IYv4/yGL+P8hi/j/IYv4/yGL+P8hi/j/IYv4/yGL+P8hi/j/IYv4/y+V9lIAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA10/8dLND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ
+        +f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LtD3hAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADnj/wks0Pn9LND5/yzQ+f8s0Pn/LND5/yzQ
+        +f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ
+        +f8u0fjZAP//AgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADLT+pks0Pn+LND5/yzQ
+        +f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ+f8s0Pn/LND5/yzQ
+        +f8s0Pn/LND5/yzQ+f811Pl8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAF9HRCxi4
+        lvgXuJT/F7iU/xe4lP8XuJT/F7iU/xe4lP8XuJT/F7iU/xe4lP8XuJT/F7iU/xe4lP8XuJT/F7iU/xe4
+        lP8XuJT/F7iU/xe4lP8XuJT/F7eU/xe3kvsVqlJjAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAC6IrRwGeI/0BniP/AZ4j/wGeI/8BniP/AZ4j/wGeI/8BniP/AZ4j/wGeI/8BniP/AZ4j/wGe
+        I/8BniP/AZ4j/wGeI/8BniP/AZ4j/wGeI/8BniP/AZ4j/wGeIvwQoi9SAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAA6AmZAGeJPoBniP/AZ4j/wGeI/8BniP/AZ4j/wGeI/8BniP/AZ4j/wGe
+        I/8BniP/AZ4j/wGeI/8BniP/AZ4j/wGeI/8BniP/AZ4j/wGeI/8BniP/Bp8npAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABJ4jOgOgJbwBniP9AZ4j/wGeI/8BniP/AZ4j/wOf
+        JLgGoidVDaMuJwmeJTcEoCV2Ap8k1QGeI/8BniP/AZ4j/wGeI/8BniP/AZ4k4wigJmQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAiXKCADnyVSAqElZwag
+        JFYToS8bAAAAAAAAAAAHoCiwBJ4l1QSfJ3sVlSoMC6EsLgWeJWcCniR+Ap4kcQSgJT4AqgADAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAOgJaYBniP/AZ4j/wKdJN8KnScaAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABKEmcgGeI/8BniP/AZ4j/wGeI/AAnyAIAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQrzAQAZ4j+QGeI/8BniP/AZ4j/weg
+        KJoAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEnyZ4AZ4j/wGe
+        I/8BniP/AZ4j/gCqKhIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACZ
+        AAUFoCeiAZ4j/wGeI/8BniP/AKAkKwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAACqKgYFnyZlAZ0k+wGeI/8Roi5NAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAACfIBAGoChZBJ8mtw6lMCUAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA//////+D4P//AAB//gAAP/wAAD/4AAAf+AAAH/AAAA/wAAAP8AAAD+AA
+        AD/gAAA/4AAAf+AAAH/gAAD/4AAA/+AAAP/gAAB/4AAAf+AAAH/wAAA/+AAAH/wAAB/+A8B///5////+
+        H////w////8H////h////4f////n////9/8=
+</value>
+  </data>
 </root>
